--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,43 @@
 {
   "extends": ["airbnb", "prettier", "prettier/react"],
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2018,
+    "sourceType": "module",
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
       "impliedStrict": true,
-      "classes": true
+      "classes": true,
+      "jsx": true
     }
   },
   "env": {
     "browser": true,
     "node": true,
-    "jquery": true
+    "jest": true
   },
   "rules": {
+    "@typescript-eslint/no-unused-vars": [
+      1,
+      {
+        "argsIgnorePattern": "res|next|stage|^err|on|config|e"
+      }
+    ],
+    
+    "@typescript-eslint/prefer-interface": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/camelcase": 0,
+    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-non-null-assertion": 0,
     "no-unused-vars": [
       1,
       {
@@ -56,7 +79,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".js", ".jsx"]
+        "extensions": [".js", ".jsx", "tsx"]
       }
     ],
     "quotes": [
@@ -72,7 +95,7 @@
       "error",
       {
         "trailingComma": "es5",
-        "semi": false,
+        "semi": true,
         "singleQuote": true,
         "printWidth": 120
       }
@@ -85,5 +108,5 @@
       }
     ]
   },
-  "plugins": ["prettier", "react-hooks"]
+  "plugins": ["@typescript-eslint", "prettier", "react-hooks"]
 }
