--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
     "dotenv": "^8.2.0",
+    "fontsource-roboto": "^3.0.3",
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.24",
